[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["limiteinductive"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
torch = "^1.12.1"
torchvision = "^0.13.1"
hivemind = "^1.1.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
